--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -17,23 +17,25 @@
                     <div class="header__nav">
                         <nav class="header__menu mobile-menu">
                             <ul>
-                                <li class="active"><a href="./index.html">Home</a></li>
-                                <li><a href="./listing.html">Listing</a></li>
-                                <li><a href="#">Categories</a></li>
-                                <li><a href="#">Pages</a>
+                                <li class="active"><a href="/">Ana Sayfa</a></li>
+                                <li><a href="./listing.html">Kategoriler</a></li>
+                                <li><a href="#">SSS</a></li>
+                                <li><a href="/referanslar">Referanslar</a></li>
+                                <li><a href="/hakkimizda">Hakkımızda</a></li>
+                                <!--<li><a href="#">Pages</a>
                                     <ul class="dropdown">
-                                        <li><a href="./about.html">About</a></li>
+                                        <li><a href="/hakkimizda">Hakkımızda</a></li>
                                         <li><a href="./listing-details.html">Listing Details</a></li>
                                         <li><a href="./blog-details.html">Blog Details</a></li>
                                         <li><a href="./contact.html">Contact</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="./blog.html">Blog</a></li>
-                                <li><a href="#">Shop</a></li>
+                                </li>-->
+                                <li><a href="/iletisim">İletişim</a></li>
+
                             </ul>
                         </nav>
                         <div class="header__menu__right">
-                            <a href="#" class="primary-btn"><i class="fa fa-plus"></i>Add Listing</a>
+                            <a href="#" class="primary-btn"><i class="fa fa-plus"></i>Yer Ekle</a>
                             <a href="#" class="login-btn"><i class="fa fa-user"></i></a>
                         </div>
                     </div>
