--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -4,36 +4,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="hero__text">
-                        <div class="section-title">
-                            <h2>Discover The Best Services Near You</h2>
-                            <p>1.118.940.376 The best service package is waiting for you</p>
-                        </div>
-                        <div class="hero__search__form">
-                            <form action="#">
-                                <input type="text" placeholder="Search...">
-                                <div class="select__option">
-                                    <select>
-                                        <option value="">Choose Categories</option>
-                                    </select>
-                                </div>
-                                <div class="select__option">
-                                    <select>
-                                        <option value="">Choose Location</option>
-                                    </select>
-                                </div>
-                                <button type="submit">Explore Now</button>
-                            </form>
-                        </div>
-                        <ul class="hero__categories__tags">
-                            <li><a href="#"><img src="{% static 'img/hero/cat-1.png'%}" alt=""> Restaurent</a></li>
-                            <li><a href="#"><img src="{% static 'img/hero/cat-2.png'%}" alt=""> Food & Drink</a></li>
-                            <li><a href="#"><img src="{% static 'img/hero/cat-3.png'%}" alt=""> Shopping</a></li>
-                            <li><a href="#"><img src="{% static 'img/hero/cat-4.png'%}" alt=""> Beauty</a></li>
-                            <li><a href="#"><img src="{% static 'img/hero/cat-5.png'%}" alt=""> Hotels</a></li>
-                            <li><a href="#"><img src="{% static 'img/hero/cat-6.png'%}" alt=""> All Categories</a></li>
+                    <div id="slider">
+                        <a href="#" class="control_next">></a>
+                        <a href="#" class="control_prev"><</a>
+                        <ul>
+                            {% for rs in sliderdata %}
+                            <li><img src="{{ rs.image.url }}" alt="{{ rs.title }}"></li>
+                            {% endfor %}
                         </ul>
                     </div>
+
                 </div>
             </div>
         </div>
