--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -70,3 +70,4 @@
     <script src="{% static 'js/jquery.slicknav.js'%}"></script>
     <script src="{% static 'js/owl.carousel.min.js'%}"></script>
     <script src="{% static 'js/main.js'%}"></script>
+    <script src="{% static 'js/slider.js'%}"></script>
