--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/slicknav.min.css'%}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css">
-
+    <link rel="stylesheet" href="{% static 'css/slider.css'%}" type="text/css">
     {% block head %} {% endblock %}
 </head>
 <body>
