--- a/home/templates/places.html
+++ b/home/templates/places.html
@@ -1,57 +1,38 @@
-    {% load static %}
-    <!-- Hero Section Begin -->
-    <section class="hero set-bg" data-setbg="{% static 'img/hero/hero-bg.jpg'%}">
+{% extends "homebase.html"%}
+
+{% block title %} Hakkımızda -- {{setting.company}} {% endblock %}
+{% block keywords %} {{setting.keywords}} {% endblock %}
+{% block description %} {{setting.description}} {% endblock %}
+{% block head %}
+    <link rel="icon" href='{{setting.icon.url}}' type="image/x-icon">
+{% endblock %}
+
+{% block content %}
+{% load static %}
+    <!-- Breadcrumb Begin -->
+    <div class="breadcrumb-area set-bg" data-setbg="{% static 'img/breadcrumb/breadcrumb-normal.jpg'%}">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div id="slider">
-                        <a href="#" class="control_next">></a>
-                        <a href="#" class="control_prev"><</a>
-                        <ul>
-                            {% for rs in sliderdata %}
-                            <li><img src="{{ rs.image.url }}" alt="{{ rs.title }}"></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Hero Section End -->
-
-    <!-- Categories Section Begin -->
-    <section class="categories spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Most Popular Categories</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
-                    </div>
-                    <div class="categories__item__list">
-                        {% for rs in category %}
-                        <div class="categories__item">
-                            <img src="{{ rs.image.url }}" alt="">
-                            <h5>{{ rs.title }}</h5>
-                            <span>78 Listings</span>
+                <div class="col-lg-12 text-center">
+                    <div class="breadcrumb__text">
+                        <h2>Turistik yerler</h2>
+                        <div class="breadcrumb__option">
+                            <a href="/"><i class="fa fa-home"></i> Ana Sayfa</a>
+                            <span>Turistik Yerler</span>
                         </div>
-                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Categories Section End -->
-
+    </div>
     <!-- Most Search Section Begin -->
     <section class="most-search spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>The Most Searched Services</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
+                        <h2>En Sevilen Turistik Yerler</h2>
+                        <p>Gezmeyi Sevenlerin En Sık Uğradığı Yerler</p>
                     </div>
                 </div>
             </div>
@@ -1222,248 +1203,4 @@
         </div>
     </section>
     <!-- Most Search Section End -->
-
-    <!-- Work Section Begin -->
-    <section class="work spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>How Does It Work</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="work__item">
-                        <div class="work__item__number">01.</div>
-                        <img src="{% static 'img/work/work-1.png'%}" alt="">
-                        <h5>Location & Categories</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="work__item">
-                        <div class="work__item__number">02.</div>
-                        <img src="{% static 'img/work/work-2.png'%}" alt="">
-                        <h5>Explore Listting</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="work__item">
-                        <div class="work__item__number">03.</div>
-                        <img src="{% static 'img/work/work-3.png'%}" alt="">
-                        <h5>Making Appointments</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Work Section End -->
-
-    <!-- Feature Location Section Begin -->
-    <section class="feature-location spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Top Featured Locations</h2>
-                        <p>Explore restaurants, bars, and cafés by locality</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <a href="#" class="feature__location__item large-item set-bg"
-                        data-setbg="{% static 'img/feature-location/fl-1.jpg'%}">
-                        <div class="feature__location__item__text">
-                            <h5>Washington, D.C</h5>
-                            <ul>
-                                <li>2045 Listings</li>
-                                <li>3648 Users</li>
-                            </ul>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <a href="#" class="feature__location__item set-bg"
-                                data-setbg="{% static 'img/feature-location/fl-2.jpg'%}">
-                                <div class="feature__location__item__text">
-                                    <h5>Chicago</h5>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-lg-6 col-md-6">
-                            <a href="#" class="feature__location__item set-bg"
-                                data-setbg="{% static 'img/feature-location/fl-3.jpg'%}">
-                                <div class="feature__location__item__text">
-                                    <h5>San Antonio</h5>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <a href="#" class="feature__location__item set-bg" data-setbg="{% static 'img/feature-location/fl-4.jpg'%}">
-                        <div class="feature__location__item__text">
-                            <h5>Los Angeles</h5>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Feature Location Section End -->
-
-    <!-- Testimonial Section Begin -->
-    <section class="testimonial spad set-bg" data-setbg="{% static 'img/testimonial/testimonial-bg.jpg'%}">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Trusted By Over 5000+ User</h2>
-                        <p>What people say about us</p>
-                    </div>
-                    <div class="testimonial__slider owl-carousel">
-                        <div class="testimonial__item" data-hash="review-1">
-                            <p>" We worked with Consultant. Our representative was very knowledgeable and helpful.
-                                Consultant made a number of suggestions to help improve our systems. Consultant
-                                explained how things work and why it would help."</p>
-                            <div class="testimonial__item__author">
-                                <a href="#review-3"><img src="{% static 'img/testimonial/author-3.png'%}" alt=""></a>
-                                <a href="#review-1" class="active"><img src="{% static 'img/testimonial/author-1.png'%}" alt=""></a>
-                                <a href="#review-2"><img src="{% static 'img/testimonial/author-2.png'%}" alt=""></a>
-                            </div>
-                            <div class="testimonial__item__author__text">
-                                <h5>John Smith -</h5>
-                                <div class="testimonial__item__author__rating">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-                            </div>
-                            <span>CEO Colorlib</span>
-                        </div>
-                        <div class="testimonial__item" data-hash="review-2">
-                            <p>" We worked with Consultant. Our representative was very knowledgeable and helpful.
-                                Consultant made a number of suggestions to help improve our systems. Consultant
-                                explained how things work and why it would help."</p>
-                            <div class="testimonial__item__author">
-                                <a href="#review-1"><img src="{% static 'img/testimonial/author-1.png'%}" alt=""></a>
-                                <a href="#review-2" class="active"><img src="{% static 'img/testimonial/author-2.png'%}" alt=""></a>
-                                <a href="#review-3"><img src="{% static 'img/testimonial/author-3.png'%}" alt=""></a>
-                            </div>
-                            <div class="testimonial__item__author__text">
-                                <h5>John Smith -</h5>
-                                <div class="testimonial__item__author__rating">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-                            </div>
-                            <span>CEO Colorlib</span>
-                        </div>
-                        <div class="testimonial__item" data-hash="review-3">
-                            <p>" We worked with Consultant. Our representative was very knowledgeable and helpful.
-                                Consultant made a number of suggestions to help improve our systems. Consultant
-                                explained how things work and why it would help."</p>
-                            <div class="testimonial__item__author">
-                                <a href="#review-2"><img src="{% static 'img/testimonial/author-2.png'%}" alt=""></a>
-                                <a href="#review-3" class="active"><img src="{% static 'img/testimonial/author-3.png'%}" alt=""></a>
-                                <a href="#review-1"><img src="{% static 'img/testimonial/author-1.png'%}" alt=""></a>
-                            </div>
-                            <div class="testimonial__item__author__text">
-                                <h5>John Smith -</h5>
-                                <div class="testimonial__item__author__rating">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-                            </div>
-                            <span>CEO Colorlib</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Testimonial Section End -->
-
-    <!-- Blog Section Begin -->
-    <section class="news-post spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>News Post</h2>
-                        <p>Checkout Latest News And Articles From Our Blog</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-1.jpg'%}">
-                            <a href="https://www.youtube.com/watch?v=8EJ3zbKTWQ8" class="play-btn video-popup"><i class="fa fa-play"></i></a>
-                        </div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Videos</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-2.jpg'%}"></div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Restaurant</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-3.jpg'%}"></div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Restaurant</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Blog Section End -->
+{% endblock %}
