--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -18,7 +18,13 @@
                         <nav class="header__menu mobile-menu">
                             <ul>
                                 <li class="active"><a href="/">Ana Sayfa</a></li>
-                                <li><a href="./listing.html">Kategoriler</a></li>
+                                <li><a href="#">Kategoriler</a>
+                                    <ul class="dropdown">
+                                        {% for rs in category %}
+                                        <li><a href="/category/{{ rs.id }}/{{ rs.slug }}">{{ rs.title }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                </li>
                                 <li><a href="#">SSS</a></li>
                                 <li><a href="/referanslar">Referanslar</a></li>
                                 <li><a href="/hakkimizda">Hakkımızda</a></li>
