18-yer-detay-slider

--- a/home/templates/place_detail.html
+++ b/home/templates/place_detail.html
@@ -179,7 +179,7 @@
                             <h4>Yorumlar</h4>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <img src="{% static 'img/listing/details/comment.png '%}" alt="">
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -201,7 +201,7 @@
                             </div>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <img src="{% static 'img/listing/details/comment.png'%}" alt="">
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -223,7 +223,7 @@
                             </div>
                             <div class="listing__details__comment__item">
                                 <div class="listing__details__comment__item__pic">
-                                    <img src="img/listing/details/comment.png" alt="">
+                                    <img src="{% static 'img/listing/details/comment.png'%}" alt="">
                                 </div>
                                 <div class="listing__details__comment__item__text">
                                     <div class="listing__details__comment__item__rating">
@@ -247,9 +247,9 @@
                         <div class="listing__details__review">
                             <h4>Yorum Ekle</h4>
                             <form action="#">
-                                <input type="text" placeholder="Name">
-                                <input type="text" placeholder="Email">
-                                <textarea placeholder="Review"></textarea>
+                                <input type="text" placeholder="Ad Soyad">
+                                <input type="text" placeholder="E-Posta Adres">
+                                <textarea placeholder="Yorum"></textarea>
                                 <button type="submit" class="site-btn">Gönder</button>
                             </form>
                         </div>
