--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -432,11 +432,12 @@ ol {
 	background: rgba(255, 255, 255, 0.1);
 	padding: 20px;
 	border-radius: 5px;
+	text-align: center;
 }
 
 .hero__search__form form input {
 	width: 40%;
-	float: left;
+	/*float: left;*/
 	font-size: 15px;
 	color: #A8A8A8;
 	padding-left: 30px;
