--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="{% static 'img/logo.png'%}" alt=""></a>
+                        <a href="/"><img src="{% static 'img/logo.png'%}" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-9 col-md-9">
