--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "homebase.html"%}
 
-{% block title %} İletişim -- {{setting.company}} {% endblock %}
+{% block title %} Giriş Ekranı -- {{setting.company}} {% endblock %}
 {% block keywords %} {{setting.keywords}} {% endblock %}
 {% block description %} {{setting.description}} {% endblock %}
 {% block head %}
