--- a/user/templates/user_profile.html
+++ b/user/templates/user_profile.html
@@ -104,7 +104,8 @@
                                                 </ul>
                                             </div>
                                             <div class="listing__item__text__info">
-
+                                                <a href="#" >Düzenle </a>
+                                                <a href="/user/yer_sil/{{ rs.id }}/{{ rs.slug }}" onclick="return confirm('are you sure')" >Sil</a>
                                             </div>
                                         </div>
                                     </div>
@@ -120,5 +121,6 @@
         </div>
     </section>
     <!-- Most Search Section End -->
+
 
 {% endblock %}
