--- a/home/templates/hakkimizda.html
+++ b/home/templates/hakkimizda.html
@@ -33,7 +33,7 @@
                 <div class="col-lg-5 col-md-5">
                     <div class="about__title">
                         <h2>Turistik Yerler Sitesine<br /> Hoş Geldiniz</h2>
-                        <a href="#" class="primary-btn">İletişim</a>
+                        <a href="/iletisim" class="primary-btn">İletişim</a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-7">
