--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -26,8 +26,7 @@
                                         {% endfor %}
                                     </ul>
                                 </li>
-                                <li><a href="#">SSS</a></li>
-                                <li><a href="/referanslar">Referanslar</a></li>
+                                <li><a href="/faq">SSS</a></li>
                                 <li><a href="/hakkimizda">Hakkımızda</a></li>
                                 <!--<li><a href="#">Pages</a>
                                     <ul class="dropdown">
