--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -134,10 +134,6 @@
     </section>
     <!-- Most Search Section End -->
 
-
-
-
-
     <!-- Testimonial Section Begin -->
     <section class="testimonial spad set-bg" data-setbg="{% static 'img/testimonial/testimonial-bg.jpg'%}">
         <div class="container">
@@ -218,69 +214,58 @@
     </section>
     <!-- Testimonial Section End -->
 
-    <!-- Blog Section Begin -->
-    <section class="news-post spad">
+    <!-- Tarihi Yerler Kategorisi Section Begin -->
+    <section class="most-search spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>News Post</h2>
-                        <p>Checkout Latest News And Articles From Our Blog</p>
+                        <h2>Tarihi Yerler Kategorisi</h2>
+                        <p>.....</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-1.jpg'%}">
-                            <a href="https://www.youtube.com/watch?v=8EJ3zbKTWQ8" class="play-btn video-popup"><i class="fa fa-play"></i></a>
+                <div class="col-lg-12">
+
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="tabs-1" role="tabpanel">
+                            <div class="row">
+                                {% for rs in placesTarihi %}
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="listing__item">
+                                        <div class="listing__item__pic set-bg" data-setbg="{{ rs.image.url }}">
+                                            <img src="{% static 'img/listing/list_icon-1.png'%}" alt="">
+                                            <div class="listing__item__pic__tag">{{rs.category.title}}</div>
+                                            <div class="listing__item__pic__btns">
+                                                <a href="/place/{{ rs.id }}/{{ rs.slug }}"><span class="icon_zoom-in_alt"></span></a>
+                                                <a href="#"><span class="icon_heart_alt"></span></a>
+                                            </div>
+                                        </div>
+                                        <div class="listing__item__text">
+                                            <div class="listing__item__text__inside">
+                                                <h5><a href="/place/{{ rs.id }}/{{ rs.slug }}">
+                                                    {{ rs.title }} </a></h5>
+                                                <ul>
+                                                    <li><span class="icon_pin_alt"></span> {{ rs.adres }}</li>
+                                                    <li><span class="icon_phone"></span> {{ rs.telefon }}</li>
+                                                </ul>
+                                            </div>
+                                            <div class="listing__item__text__info">
+
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                {% endfor %}
+                            </div>
                         </div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Videos</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-2.jpg'%}"></div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Restaurant</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="{% static 'img/blog/blog-3.jpg'%}"></div>
-                        <div class="blog__item__text">
-                            <ul class="blog__item__tags">
-                                <li><i class="fa fa-tags"></i> Travel</li>
-                                <li>Restaurant</li>
-                            </ul>
-                            <h5><a href="#">Internet Banner Advertising Most Reliable</a></h5>
-                            <ul class="blog__item__widget">
-                                <li><i class="fa fa-clock-o"></i> 19th March, 2019</li>
-                                <li><i class="fa fa-user"></i> John Smith</li>
-                            </ul>
-                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Blog Section End -->
+    <!-- Tarihi Yerler Kategorisi End -->
+
